<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:defaultValue="FoSer"
            app:icon="@drawable/circle"
            app:key="message"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <CheckBoxPreference
            app:key="show_time"
            app:summary="Yes/No"
            app:title="@string/reply_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="double"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

        <DropDownPreference
            app:defaultValue="2"
            app:entries="@array/refresh_times"
            app:entryValues="@array/refresh_times_values"
            app:key="refresh_freq"
            app:title="How often to increase the timer"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:key="save_counter"
            app:summary="Continue counting after restart"
            app:title="Remember timer value" />

    </PreferenceCategory>

</PreferenceScreen>